# tailslayer

./: CMakeLists.txt  README.md  tailslayer_example.cpp
include/tailslayer/: hedged_reader.hpp
